# deeplink-rs

./: Cargo.toml  README.md  rustfmt.toml
examples/: check_signature.rs  client.rs  server.rs
src/: handlers.rs  jwt.rs  main.rs  mongo.rs  types.rs  utils.rs
src/db/: mod.rs  mongo.rs
src/handler/: handlers.rs
