[package]
name = "deeplink-rs"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "deeplink-server"

[dependencies]
anyhow = "1.0.70"
axum = {version="0.6.16", features =["ws", "headers"]}
axum-extra = {version="0.7.4"}
bson = "2.6.1"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"
mongodb = "2.5.0"
rand = "0.8.5"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "deeplink-server"
path = "src/main.rs"
